--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ authors:
     email: "hello@senthilnayagan.com"
     web: https://senthilnayagan.com/
     twitter: https://twitter.com/SenthilNayagan
+    instagram: https://www.instagram.com/senthilnayagan
     description: "I am a Data Engineer by profession and a Rustacean by interest. Founder and Content Creator, <a href='https://towardsdata.dev' target='_blank'>towardsdata.dev</a>."
 
 # Plugins
